# cpp-2020-random-forest

./: CMakeLists.txt  generate_dataset.py  main.cpp  performance_test.cpp  plot_logs.py  readme.md  sandbox.cpp  sklearn_test.py
data/: train.csv  val.csv
logs/: performance_logs.csv
src/: csv_writer.cpp  csv_writer.h  data.cpp  data.h  decision_tree.cpp  decision_tree.h  metrics.cpp  metrics.h  random_forest.cpp  random_forest.h  time_measurement.h
